namespaces/live-1.cloud-platform.service.justice.gov.uk/court-probation-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: court-probation-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "production"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "Prepare a case"
    cloud-platform.justice.gov.uk/owner: "Probation In Court Team: probation-in-court-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/prepare-a-case"
